--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1",
+    "gsap": "^3.9.1",
     "smoothscroll-polyfill": "^0.4.4"
   }
 }
