--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@lukeed/uuid": "^2.0.0",
     "@sveltejs/adapter-static": "^1.0.0-next.28",
     "cookie": "^0.4.1",
-    "gsap": "^3.9.1",
-    "locomotive-scroll": "^4.1.4"
+    "gsap": "^3.9.1"
   }
 }
